# ashare

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
config/: app-worker.example.yaml  providers.example.yaml  rules.example.yaml  storage.yaml
desktop-worker/: README.md  package-lock.json  package.json
desktop-worker/scripts/: package-portable.ps1  runtime-entry.py
desktop-worker/src/: event-utils.js  heartbeat-utils.js  main.js  preload.js  python-runner.js  scheduler-utils.js  worker-config.js
desktop-worker/src/renderer/: index.html  renderer.js  styles.css
desktop-worker/test/: worker-config.test.js
examples/manual_input/: README.md  capital_flow_or_chip.csv  daily_prices.csv  risk_events.csv  security_master.csv  trading_calendar.csv
schemas/curated/: capital_flow_or_chip.yaml  daily_prices.yaml  industry_classification.yaml  industry_daily.yaml  risk_events.yaml  security_master.yaml  trading_calendar.yaml
schemas/metadata/: curated_versions.yaml  data_batches.yaml  datasets.yaml  schema_fields.yaml  schema_versions.yaml  snapshot_manifests.yaml
src/stock_picker/: __init__.py  analysis.py  app_worker.py  cli.py  config.py  curated.py  display.py  factor_exploration.py  factor_research.py  provider.py  provider_run_engine.py  publish.py  quality.py  reports.py  snapshot.py  storage.py  strategy.py  sync.py  tushare_mappings.py  workflow.py
src/stock_picker/cli_commands/: __init__.py  analysis.py  app_worker.py  dispatch.py  provider.py  publish.py  storage.py  strategy_factor.py  (+1 more)
tests/: test_desktop_console.py  test_storage.py
